# IbisExtension

./: .gitignore  README.md  pyproject.toml
docs/designs/: dsql-syntax-extension-design.md
docs/plans/: 2026-03-23-scalar-subquery-rhs-design.md  2026-03-23-scalar-subquery-rhs.md  2026-03-24-derived-field-scalar-guard-design.md  2026-03-24-derived-field-scalar-guard.md
docs/reviews/: 2026-03-28-time-handling-review.md
docs/testing/: time-handling-test-matrix.md
src/ibis_dsql/: __init__.py  api.py  compiler.py  dialect.py  exceptions.py  rewrites.py  temporal.py
tests/: test_api.py  test_compiler.py  test_connect_by.py  test_custom_time_handling_scene.py  test_derived_field_scalar_guard.py  test_sql.py  test_temporal_policy.py  test_time_handling.py  test_time_handling_extended.py
